# proof-checker

./: CMakeLists.txt  LICENSE  README.md  check_cnfization.py  check_liaTheory.py  check_liaTheoryProp.py  check_lia_lraTheory.py  check_lraTheoryProp.py  check_lra_lraTheory.py  check_ufTheory.py  check_ufTheoryProp.py  proof-check.sh  proofparser.cc
.circleci/: config.yml
test/regression/: add-proofchecker-instance.sh  add-proofparser-instance.sh  test-proofchecker.sh  test-proofparser.sh
test/regression/instances/: ok.osmt  sat-with-proof.osmt  unparseable-proof.osmt  unparseable-proof2.osmt  unparseable-proof3.osmt  unparseable.osmt
test/regression/proofchecker-output/: unparseable.osmt.expected.out
test/regression/proofparser-output/: unparseable-proof.osmt.expected.out  unparseable-proof2.osmt.expected.out  unparseable-proof3.osmt.expected.out  unparseable.osmt.expected.out
